--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,11 @@
-version: '3.1'
+version: '3.7'
 
 services:
   api:
     build: .
     volumes:
       - /usr/src/app/node_modules
-      - ./api:/usr/src/app
+      - .:/usr/src/app
     environment:
       NODE_ENV: development
       HOSTNAME: 0.0.0.0
