--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   "dependencies": {
     "apollo-server": "^2.9.15",
     "dotenv": "^8.2.0",
-    "graphql": "^14.5.8"
+    "graphql": "^14.5.8",
+    "mongoose": "^5.8.3"
   },
   "devDependencies": {
     "eslint": "^6.8.0",
