--- a/package.json
+++ b/package.json
@@ -12,8 +12,12 @@
   "license": "ISC",
   "dependencies": {
     "apollo-server": "^2.9.15",
+    "axios": "^0.19.0",
+    "cheerio": "^1.0.0-rc.3",
     "dotenv": "^8.2.0",
+    "form-data": "^3.0.0",
     "graphql": "^14.5.8",
+    "iconv": "^2.3.5",
     "mongoose": "^5.8.3"
   },
   "devDependencies": {
