--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,6 +12,9 @@ services:
       PORT: 4000
       SECRET: E8D94B8BE8AE1
       DATABASE_URL: mongodb://linku_user:root_12345@db:27017/linku
+    ports:
+      - 4000:4000
+      - 9229:9229
     depends_on:
       - db
   db:
