--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon index.js",
+    "dev": "npx nodemon index.js",
     "start": "node index.js",
-    "debug": "nodemon --inspect=0.0.0.0 index.js",
+    "debug": "nodemon --inspect=0.0.0.0 index.js"
   },
   "author": "",
   "license": "ISC",
@@ -25,6 +25,8 @@
     "eslint": "^6.8.0",
     "eslint-config-airbnb-base": "^14.0.0",
     "eslint-plugin-import": "^2.19.1",
-    "nodemon": "^2.0.2"
+    "eslint-plugin-prettier": "^3.1.2",
+    "nodemon": "^2.0.2",
+    "prettier": "^1.19.1"
   }
 }
