--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "apollo-server": "^2.9.15",
     "axios": "^0.19.0",
+    "bull": "^3.12.1",
     "cheerio": "^1.0.0-rc.3",
     "dotenv": "^8.2.0",
     "form-data": "^3.0.0",
