--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,9 @@ version: '3.7'
 
 services:
   api:
-    build: .
+    build:
+      context: .
+      dockerfile: Dockerfile.dev
     volumes:
       - /usr/src/app/node_modules
       - .:/usr/src/app
@@ -10,6 +12,7 @@ services:
       NODE_ENV: development
       ORIGIN: http://localhost:4000
       PORT: 4000
+      ACTUAL_PERIOD: 202010
       SECRET: E8D94B8BE8AE1
       SCRAPER_BASE_URL: https://guayacan.uninorte.edu.co/4PL1CACI0N35/registro
       DATABASE_URL: mongodb://linku_user:root_12345@db:27017/linku
@@ -17,7 +20,6 @@ services:
     ports:
       - 4000:4000
       - 9229:9229
-      - 4004:4004
     depends_on:
       - db
       - redis
