--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "form-data": "^3.0.0",
     "graphql": "^14.5.8",
     "iconv": "^2.3.5",
-    "mongoose": "^5.8.3"
+    "mongoose": "^5.8.3",
+    "mongoose-paginate-v2": "^1.3.6"
   },
   "devDependencies": {
     "eslint": "^6.8.0",
