--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,20 +16,20 @@ jobs:
         with:
           node-version: ${{ matrix.node_version }}
       - name: Login to Heroku
-        uses: actions/heroku@1.0.0
+        uses: sjdonado/heroku@master
         with:
           args: container:login
         env:
           HEROKU_API_KEY: ${{ secrets.HEROKU_API_KEY }}
       - name: Push
-        uses: actions/heroku@1.0.0
+        uses: sjdonado/heroku@master
         with:
           args: container:push -a $APP_NAME web
         env:
           HEROKU_API_KEY: ${{ secrets.HEROKU_API_KEY }}
           APP_NAME: linku2-api
       - name: Release
-        uses: actions/heroku@1.0.0
+        uses: sjdonado/heroku@master
         with:
           args: container:release -a $APP_NAME web
         env:
